Se hiso la tabla y la descripcion

--- a/eminent-escape/src/pages/index.astro
+++ b/eminent-escape/src/pages/index.astro
@@ -2,9 +2,12 @@
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 import BasicCard from '../components/BasicCard.astro';
+import MyTable from '../components/MyTable.astro';
+import Description from '../components/Description.astro';
 ---
 
 <Layout>
-
-	<BasicCard title="Desarrollador de software" image="assets/home_image_one.png">
+	<BasicCard title="Desarrollador de software" image="assets/home_image_one.png"/>
+	<MyTable/>
+	<Description/>
 </Layout>
