--- a/eminent-escape/src/components/MyTable.astro
+++ b/eminent-escape/src/components/MyTable.astro
@@ -23,7 +23,7 @@
             </tr>
             <tr>
                 <td class="border-2 border-primary p-2 md:text-lg">Experiencia</td>
-                <td class="border-2 border-primary p-2 md:text-lg md:text-center">4 años de experiencia laboral</td>
+                <td class="border-2 border-primary p-2 md:text-lg md:text-center">+4 años de experiencia laboral</td>
             </tr>
             <tr>
                 <td class="border-2 border-primary p-2 md:text-lg">Ingles</td>
