--- a/eminent-escape/src/pages/index.astro
+++ b/eminent-escape/src/pages/index.astro
@@ -8,7 +8,7 @@ import CarruselCard from '../components/CarruselCard.astro';
 
 const information = [
 	{
-		image: 'assets/Logo_de_Inbursa.svg',
+		image: 'assets/logo_Inbursa.png',
 		imageTitle: 'Inbursa',
 		description: 'Participación activa en el desarrollo y mantenimiento de microservicios utilizando Java, Spring Boot y PL/SQL. Colaboración constante dentro de un equipo ágil bajo la metodología Scrum, resolución eficiente de incidencias en producción. Uso de Git y Jira para el control de versiones y gestión colaborativa del código.',
 		tecnologies: [
@@ -35,21 +35,64 @@ const information = [
 		]
 	},
 	{
-		image: 'assets/Logo_de_Inbursa.svg',
+		image: 'assets/logo_biller_ticket.png',
 		imageTitle: 'BillerTicket',
-		description: 'lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.',
+		description: 'Encargado del mantenimiento y mejora continua colaborativamente de una aplicación web desarrollada con Java y Spring Boot en el backend, y Vue.js con Vuetify en el frontend. Participación en la corrección de errores, implementación de nuevas funcionalidades, ajustes visuales y optimización de la experiencia de usuario.',
 		tecnologies: [
+			{
+				name: 'Meses',
+				image: 'assets/experiencia_6.svg'
+			},
+			{
+				name: 'Java',
+				image: 'assets/java.svg'
+			},
+			{
+				name: 'JavaScript',
+				image: 'assets/javascript.svg'
+			},
 			{
 				name: 'Spring',
 				image: 'assets/springboot.svg'
 			},
 			{
-				name: 'PL/SQL',
-				image: 'assets/plsql.svg'
+				name: 'Vue.js',
+				image: 'assets/vue.svg'
+			},
+			{
+				name: 'Vuetify',
+				image: 'assets/vuetify.svg'
 			},
 			{
 				name: 'Git',
 				image: 'assets/git.svg'
+			}
+		]
+	},
+	{
+		image: 'assets/logo_triplede.png',
+		imageTitle: 'TripleDe',
+		description: 'Colaboración en el mantenimiento y mejora de una aplicación web desarrollada con Java y JSF, integrada con el ERP NetSuite. Desarrollo de tareas programadas ("cron job") para sincronizar datos entre NetSuite y base de datos.',
+		tecnologies: [
+			{
+				name: 'Meses',
+				image: 'assets/experiencia_9.svg'
+			},
+			{
+				name: 'Java',
+				image: 'assets/java.svg'
+			},
+			{
+				name: 'JSF',
+				image: 'assets/java_server_faces.svg'
+			},
+			{
+				name: 'SQL',
+				image: 'assets/plsql.svg'
+			},
+			{
+				name: 'NetSuite',
+				image: 'assets/netsuite.svg'
 			}
 		]
 	},
