Se acabo el componente de conocimiento, se esta realizando el boton que dirige al portafolio

--- a/eminent-escape/src/components/BasicCard.astro
+++ b/eminent-escape/src/components/BasicCard.astro
@@ -19,7 +19,7 @@ const { title, image } = Astro.props;
 <!-- Vista de tablet o ventana mas grande -->
  <!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
 <div class="border-4 border-primary rounded-lg ml-4 mt-4 mr-8 mb-4" id="welcomeCardBig">
-    <div class="border-4 border-primary rounded-lg mt-2 ml-2 -mb-2 -mr-4 bg-white shadow-xl flex items-center justify-evenly p-4">
+    <div class="border-4 border-primary rounded-lg mt-2 ml-2 -mb-2 -mr-4 bg-white shadow-xl flex items-center justify-evenly p-4 overflow-hidden">
         <div>
             <h1 class="text-primary text-center font-semibold text-4xl mb-16 lg:text-6xl">{ title }</h1>
             <div class="flex justify-evenly">
