--- a/eminent-escape/src/layouts/Layout.astro
+++ b/eminent-escape/src/layouts/Layout.astro
@@ -14,7 +14,9 @@ import Menu from "../components/Menu.astro";
 	</head>
 	<body>
 		<Menu/>
-		<slot/>
+		<main class="max-w-[1080px] mx-auto">
+			<slot/>
+		</main>
 	</body>
 </html>
 
