--- a/eminent-escape/src/pages/index.astro
+++ b/eminent-escape/src/pages/index.astro
@@ -6,6 +6,8 @@ import MyTable from '../components/MyTable.astro';
 import Description from '../components/Description.astro';
 import CarruselCardPhone from '../components/CarruselCardPhone.astro';
 import CarruselCardDesktop from '../components/CarruselCardDesktop.astro';
+import Knowledge from '../components/Knowledge.astro';
+import Button from '../components/Button.astro';
 
 const information = [
 	{
@@ -38,7 +40,7 @@ const information = [
 	{
 		image: 'assets/logo_biller_ticket.png',
 		imageTitle: 'BillerTicket',
-		description: 'Encargado del mantenimiento y mejora continua colaborativamente de una aplicación web desarrollada con Java y Spring Boot en el backend, y Vue.js con Vuetify en el frontend. Participación en la corrección de errores, implementación de nuevas funcionalidades, ajustes visuales y optimización de la experiencia de usuario.',
+		description: 'Participación en el mantenimiento y mejora continua colaborativamente de una aplicación web desarrollada con Java y Spring Boot en el backend, y Vue.js con Vuetify en el frontend. Participación en la corrección de errores, implementación de nuevas funcionalidades, ajustes visuales y optimización de la experiencia de usuario.',
 		tecnologies: [
 			{
 				name: 'Meses',
@@ -98,6 +100,45 @@ const information = [
 		]
 	},
 ]
+
+const knowledge = [ 
+	{
+		image: 'assets/java.svg',
+		imageTitle: 'Java',
+		knowledgeTitle: 'Java',
+		description: 'Tengo más de 4 años de experiencia desarrollando software con java, es la tecnología que más domino al dia de hoy.'
+	},
+	{
+		image: 'assets/springboot.svg',
+		imageTitle: 'Spring Boot',
+		knowledgeTitle: 'Spring Boot',
+		description: 'El framework con el que más he trabajado es Spring Boot, domino la inyección de dependencias, el modulo de data spring y la creacion de APIs REST.'
+	},
+	{
+		image: 'assets/plsql.svg',
+		imageTitle: 'SQL',
+		knowledgeTitle: 'SQL',
+		description: 'He trabajado con diversas bases de datos de tipo relacional como "MySQL", "Oracle" y "SQLServer". También se programar en PL/SQL.'
+	},
+	{
+		image: 'assets/kotlin.svg',
+		imageTitle: 'Kotlin',
+		knowledgeTitle: 'Kotlin',
+		description: 'Actualmente estoy creando proyectos propios para aprender hacer aplicaciones android utilizando JetpackCompose.'
+	},
+	{
+		image: 'assets/javascript.svg',
+		imageTitle: 'JavaScript',
+		knowledgeTitle: 'JavaScript',
+		description: 'Conocimientos en el lenguaje JavaScript creando proyectos con Astro como este y aspirando a conocer Angular, React y mas sobre Vue.'
+	}
+]
+
+const contentButton = {
+	text: 'Ver portafolio',
+	icon: 'assets/portfolio.svg',
+	alt: 'Portafolio'
+}
 ---
 
 <Layout>
@@ -109,5 +150,18 @@ const information = [
 	</div>
 	<div class="hidden md:block">
 		<CarruselCardDesktop information={ information } />
+	</div>
+	<h2 class="mb-2 text-center text-primary font-semibold text-2xl lg:text-6xl md:text-4xl">Mis conocimientos</h2>
+	<div class="pl-4 pr-4" >
+		{
+			knowledge.map(
+				(item) => (
+					<Knowledge knowledge={ item } />
+				)
+			)
+		}
+	</div>
+	<div class="mx-auto my-6 w-3/4">
+		<Button content={ contentButton }/>
 	</div>
 </Layout>
