Se arregla lo del menu

--- a/eminent-escape/src/components/Menu.astro
+++ b/eminent-escape/src/components/Menu.astro
@@ -20,7 +20,7 @@ var pages = [
 var path = Astro.url.pathname;
 ---
 
-<div class="flex items-center gap-4 w-full h-16 bg-primary md:flex-row-reverse">
+<div class="fixed top-0 left-0 z-10 flex items-center gap-4 w-full h-16 bg-primary md:flex-row-reverse">
     <!-- Botón hamburguesa -->
     <button id="toggleDrawer" class="m-4 p-2 text-secondary hover:bg-white rounded-md focus:outline-none md:hidden">
         <!-- Icono hamburguesa -->
