--- a/eminent-escape/src/pages/index.astro
+++ b/eminent-escape/src/pages/index.astro
@@ -142,7 +142,9 @@ const contentButton = {
 ---
 
 <Layout>
-	<BasicCard title="Desarrollador de software" image="assets/home_image_one.png"/>
+	<div class="mt-20">
+		<BasicCard title="Desarrollador de software" image="assets/home_image_one.png"/>
+	</div>
 	<MyTable/>
 	<Description/>
 	<div class="block md:hidden">
