Ya terminamos la primera pagina

--- a/eminent-escape/src/layouts/Layout.astro
+++ b/eminent-escape/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Menu from "../components/Menu.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -17,6 +18,7 @@ import Menu from "../components/Menu.astro";
 		<main class="max-w-[1080px] mx-auto">
 			<slot/>
 		</main>
+		<Footer/>
 	</body>
 </html>
 
