Se añadio la pagina 'Contacto' se agregaron algunos conocimientos y algunos iconos

--- a/eminent-escape/src/components/Footer.astro
+++ b/eminent-escape/src/components/Footer.astro
@@ -6,10 +6,10 @@
         <div>
             <h3 class="font-bold text-secondary text-xs">Enlaces utiles</h3>
             <ul class="list-disc ml-6">
-                <li><a href="" class="text-xs text-secondary hover:text-white hover:underline">Sobre mi</a></li>
-                <li><a href="" class="text-xs text-secondary hover:text-white hover:underline">Blog</a></li>
-                <li><a href="" class="text-xs text-secondary hover:text-white hover:underline">Portafolio</a></li>
-                <li><a href="" class="text-xs text-secondary hover:text-white hover:underline">Contacto</a></li>
+                <li><a href="/" class="text-xs text-secondary hover:text-white hover:underline">Sobre mi</a></li>
+                <li><a href="/blog" class="text-xs text-secondary hover:text-white hover:underline">Blog</a></li>
+                <li><a href="/portafolio" class="text-xs text-secondary hover:text-white hover:underline">Portafolio</a></li>
+                <li><a href="/contacto" class="text-xs text-secondary hover:text-white hover:underline">Contacto</a></li>
             </ul>
         </div>
         <div >
