--- a/eminent-escape/src/pages/index.astro
+++ b/eminent-escape/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 import BasicCard from '../components/BasicCard.astro';
 import MyTable from '../components/MyTable.astro';
@@ -41,7 +40,7 @@ const information = [
 	{
 		image: 'assets/logo_biller_ticket.png',
 		imageTitle: 'BillerTicket',
-		description: 'Participación en el mantenimiento y mejora continua colaborativamente de una aplicación web desarrollada con Java y Spring Boot en el backend, y Vue.js con Vuetify en el frontend. Participación en la corrección de errores, implementación de nuevas funcionalidades, ajustes visuales y optimización de la experiencia de usuario.',
+		description: 'Participación en el mantenimiento y mejora continua de una aplicación web desarrollada con Java y Spring Boot en el backend, y Vue.js con Vuetify en el frontend. Participación en la corrección de errores, implementación de nuevas funcionalidades, ajustes visuales y optimización de la experiencia de usuario.',
 		tecnologies: [
 			{
 				name: 'Meses',
@@ -107,31 +106,49 @@ const knowledge = [
 		image: 'assets/java.svg',
 		imageTitle: 'Java',
 		knowledgeTitle: 'Java',
-		description: 'Tengo más de 4 años de experiencia desarrollando software con java, es la tecnología que más domino al dia de hoy.'
+		description: 'Cuento con más de cuatro años de experiencia desarrollando software con Java, siendo esta la tecnología que mejor domino hasta el día de hoy.'
 	},
 	{
 		image: 'assets/springboot.svg',
 		imageTitle: 'Spring Boot',
 		knowledgeTitle: 'Spring Boot',
-		description: 'El framework con el que más he trabajado es Spring Boot, domino la inyección de dependencias, el modulo de data spring y la creacion de APIs REST.'
+		description: 'El framework con el que más he trabajado es Spring Boot; domino la inyección de dependencias, el módulo Spring Data y la creación de APIs REST.'
 	},
 	{
 		image: 'assets/plsql.svg',
 		imageTitle: 'SQL',
 		knowledgeTitle: 'SQL',
-		description: 'He trabajado con diversas bases de datos de tipo relacional como "MySQL", "Oracle" y "SQLServer". También se programar en PL/SQL.'
+		description: 'He trabajado con diversas bases de datos relacionales como MySQL, Oracle y SQL Server. Además, sé programar en PL/SQL.'
 	},
 	{
 		image: 'assets/kotlin.svg',
 		imageTitle: 'Kotlin',
 		knowledgeTitle: 'Kotlin',
-		description: 'Actualmente estoy creando proyectos propios para aprender hacer aplicaciones android utilizando JetpackCompose.'
+		description: 'Actualmente estoy desarrollando proyectos personales para aprender a crear aplicaciones Android utilizando Jetpack Compose.'
 	},
 	{
 		image: 'assets/javascript.svg',
 		imageTitle: 'JavaScript',
 		knowledgeTitle: 'JavaScript',
-		description: 'Conocimientos en el lenguaje JavaScript creando proyectos con Astro como este y aspirando a conocer Angular, React y mas sobre Vue.'
+		description: 'Tengo conocimientos en JavaScript, creando proyectos con Astro, y aspiro a conocer frameworks como Angular, React y Vue.'
+	},
+	{
+		image: 'assets/cplusplus.svg',
+		imageTitle: 'C++',
+		knowledgeTitle: 'C++',
+		description: 'Durante mis estudios aprendí el lenguaje C++, con el cual desarrollé un buen pensamiento lógico al crear diversos proyectos.'
+	},
+	{
+		image: 'assets/git.svg',
+		imageTitle: 'Git',
+		knowledgeTitle: 'Git',
+		description: 'Tengo experiencia colaborando en equipo, corrigiendo errores y mejorando proyectos, utilizando Git como sistema de control de versiones.'
+	},
+	{
+		image: 'assets/docker.svg',
+		imageTitle: 'Docker',
+		knowledgeTitle: 'Docker',
+		description: 'Tengo conocimientos sobre contenedores con Docker, ya que configuro localmente mis proyectos personales utilizando esta herramienta.'
 	}
 ]
 
