--- a/eminent-escape/src/layouts/Layout.astro
+++ b/eminent-escape/src/layouts/Layout.astro
@@ -13,9 +13,9 @@ import Footer from "../components/Footer.astro";
 		<meta name="generator" content={Astro.generator} />
 		<title>gerardomarquez.dev</title>
 	</head>
-	<body>
+	<body class="">
 		<Menu/>
-		<main class="max-w-[1080px] mx-auto">
+		<main class="min-h-screen max-w-[1080px] mx-auto">
 			<slot/>
 		</main>
 		<Footer/>
