Todavia no acabo pero ya le avance voy por una pizza XD

--- a/eminent-escape/src/components/MyTable.astro
+++ b/eminent-escape/src/components/MyTable.astro
@@ -11,7 +11,7 @@
         <tbody class="divide-y divide-x divide-primary">
             <tr>
                 <td class="border-2 border-primary p-2 md:text-lg">Nombre</td>
-                <td class="border-2 border-primary p-2 md:text-lg md:text-center">Luis Gerardo Marquez</td>
+                <td class="border-2 border-primary p-2 md:text-lg md:text-center">Luis Gerardo Márquez</td>
             </tr>
             <tr>
                 <td class="border-2 border-primary p-2 text-lg">Edad</td>
@@ -19,7 +19,7 @@
             </tr>
             <tr>
                 <td class="border-2 border-primary p-2 md:text-lg">Estudios</td>
-                <td class="border-2 border-primary p-2 md:text-lg md:text-center">Lic. En Ciencias de la Informatica</td>
+                <td class="border-2 border-primary p-2 md:text-lg md:text-center">Lic. En Ciencias de la Informatica (95%)</td>
             </tr>
             <tr>
                 <td class="border-2 border-primary p-2 md:text-lg">Experiencia</td>
