--- a/eminent-escape/src/pages/index.astro
+++ b/eminent-escape/src/pages/index.astro
@@ -121,6 +121,12 @@ const knowledge = [
 		description: 'He trabajado con diversas bases de datos relacionales como MySQL, Oracle y SQL Server. Además, sé programar en PL/SQL.'
 	},
 	{
+		image: 'assets/mongodb.svg',
+		imageTitle: 'Mongo DB',
+		knowledgeTitle: 'Mongo DB',
+		description: 'Conocimientos en la elaboración de consultas complejas en bases de datos no relacionales, específicamente en MongoDB.'
+	},
+	{
 		image: 'assets/kotlin.svg',
 		imageTitle: 'Kotlin',
 		knowledgeTitle: 'Kotlin',
@@ -133,12 +139,6 @@ const knowledge = [
 		description: 'Tengo conocimientos en JavaScript, creando proyectos con Astro, y aspiro a conocer frameworks como Angular, React y Vue.'
 	},
 	{
-		image: 'assets/cplusplus.svg',
-		imageTitle: 'C++',
-		knowledgeTitle: 'C++',
-		description: 'Durante mis estudios aprendí el lenguaje C++, con el cual desarrollé un buen pensamiento lógico al crear diversos proyectos.'
-	},
-	{
 		image: 'assets/git.svg',
 		imageTitle: 'Git',
 		knowledgeTitle: 'Git',
@@ -149,12 +149,19 @@ const knowledge = [
 		imageTitle: 'Docker',
 		knowledgeTitle: 'Docker',
 		description: 'Tengo conocimientos sobre contenedores con Docker, ya que configuro localmente mis proyectos personales utilizando esta herramienta.'
+	},
+	{
+		image: 'assets/cplusplus.svg',
+		imageTitle: 'C++',
+		knowledgeTitle: 'C++',
+		description: 'Durante mi formación académica aprendí C++, lenguaje con el que reforcé mi lógica de programación al desarrollar distintos proyectos, incluyendo videojuegos con SFML.'
 	}
 ]
 
 const contentPortfolioButton = {
 	text: 'Ver portafolio',
 	icon: 'assets/portfolio.svg',
+	iconHover: 'assets/portfolio_hover.svg',
 	alt: 'Portafolio'
 }
 
