--- a/eminent-escape/src/pages/contacto/index.astro
+++ b/eminent-escape/src/pages/contacto/index.astro
@@ -2,9 +2,9 @@
 import Layout from '../../layouts/Layout.astro';
 import TextInput from '../../components/TextInput.astro';
 const contentSendButton = {
-	text: 'Ver portafolio',
-	icon: 'assets/portfolio.svg',
-	iconHover: 'assets/portfolio_hover.svg',
+	text: 'Enviar',
+	icon: 'assets/send.svg',
+	iconHover: 'assets/send_hover.svg',
 	alt: 'Portafolio'
 }
 ---
